src/objects/Supplier__c.object
<CustomObject>
    <fields>
        <fullName>AccountNumber__c</fullName>
        <label>Account Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AccountTypeJP__c</fullName>
        <label>Account Type (JP Only)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AchRoutingNumber__c</fullName>
        <label>ACH Routing Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BankBranchCode__c</fullName>
        <description>Singapore only</description>
        <inlineHelpText>Singapore only</inlineHelpText>
        <label>Bank / Branch Code (SG only)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankCountry__c</fullName>
        <label>Bank Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankName__c</fullName>
        <label>Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankNumberJP__c</fullName>
        <label>Bank Number (JP Only)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BankTransitNumberCA__c</fullName>
        <description>Canada only</description>
        <inlineHelpText>Canada only</inlineHelpText>
        <label>Bank / Transit Number (CA Only)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BeneficiaryName__c</fullName>
        <label>Beneficiary Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingContactName__c</fullName>
        <label>Billing Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BillingEmail__c</fullName>
        <label>Billing Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>BillingPhone__c</fullName>
        <label>Billing Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>BranchNumberJP__c</fullName>
        <description>Japan only</description>
        <inlineHelpText>Japan only</inlineHelpText>
        <label>Branch Number (JP Only)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BsbNumber__c</fullName>
        <description>Australia only</description>
        <inlineHelpText>Australia only</inlineHelpText>
        <label>BSB Number (AU Only)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CompanyWebsite__c</fullName>
        <label>Company Website</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>DbaName__c</fullName>
        <label>Trading As/Doing Business As (DBA) Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DnbDunsNumber__c</fullName>
        <label>Dun &amp; Bradstreet DUNS Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fax__c</fullName>
        <label>Fax</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>FormerCompanyNameTaxNumber__c</fullName>
        <description>NOTE: If you are an existing supplier and your company 
name or Tax/VAT/GST Number has changed, please 
provide the former name or number for reference.</description>
        <inlineHelpText>NOTE: If you are an existing supplier and your company 
name or Tax/VAT/GST Number has changed, please 
provide the former name or number for reference.</inlineHelpText>
        <label>Former Company Name / Tax Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoodsAndServicesDescription__c</fullName>
        <label>Goods and Services Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>IbanNumber__c</fullName>
        <description>International Bank Account Number</description>
        <inlineHelpText>International Bank Account Number</inlineHelpText>
        <label>IBAN Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PanIN__c</fullName>
        <description>Permanent Account  Number (India only)</description>
        <inlineHelpText>Permanent Account  Number (India only)</inlineHelpText>
        <label>PAN</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentCity__c</fullName>
        <label>Payment City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentCountry__c</fullName>
        <label>Payment Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentCurrency__c</fullName>
        <label>Payment Currency</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentPostalCode__c</fullName>
        <label>Payment Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentRegion__c</fullName>
        <label>Payment Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentRemittanceContactName__c</fullName>
        <label>Payment Remittance Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentRemittanceEmail__c</fullName>
        <label>Payment Remittance Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PaymentRemittancePhone__c</fullName>
        <label>Payment Remittance Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>PaymentState__c</fullName>
        <label>Payment State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PaymentStreet__c</fullName>
        <label>Payment Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PoTxContactName__c</fullName>
        <label>PO Transmissions Contact Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PoTxEmail__c</fullName>
        <label>PO Transmissions Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PoTxPhone__c</fullName>
        <label>PO Transmissions Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SupplierCity__c</fullName>
        <label>Supplier City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierCountry__c</fullName>
        <label>Supplier Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierPostalCode__c</fullName>
        <label>Supplier Postal Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierRegion__c</fullName>
        <label>Supplier Region</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierState__c</fullName>
        <label>Supplier State</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SupplierStreet__c</fullName>
        <label>Supplier Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SwiftCode__c</fullName>
        <label>SWIFT Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TaxIdType__c</fullName>
        <inlineHelpText>TIN = Tax Identification Number
EIN = Employer Identification Number
SSN = Social Security Number
ABN = Australian Business Number
IRD = Inland Revenue Department (New Zealand)</inlineHelpText>
        <label>Tax ID Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>TIN</fullName>
                </value>
                <value>
                    <fullName>EIN</fullName>
                </value>
                <value>
                    <fullName>SSN</fullName>
                </value>
                <value>
                    <fullName>ABN</fullName>
                </value>
                <value>
                    <fullName>IRD</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TaxId__c</fullName>
        <label>Tax ID Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VatGstRegNumber__c</fullName>
        <description>EMEA/APAC Regions Only</description>
        <inlineHelpText>EMEA/APAC Regions Only</inlineHelpText>
        <label>VAT/GST Registration Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WhenSupplierSubmitted__c</fullName>
        <label>When Supplier Submitted</label>
        <type>DateTime</type>
    </fields>
    <label>Supplier</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>AccountNumber__c</columns>
        <columns>SupplierState__c</columns>
        <columns>Approved__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Supplier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Suppliers</pluralLabel>
    <recordTypes>
        <fullName>Existing</fullName>
        <active>true</active>
        <label>Existing Supplier</label>
    </recordTypes>
    <recordTypes>
        <fullName>New</fullName>
        <active>true</active>
        <label>New Supplier</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>